@@ -1,4 +1,5 @@
 0.7.0 - currently working on
+- [#3411] Feature: Add tx_oelib_templatehelper::ensureIntegerArrayValues
 - [#3413] Fix: Some functions in oelib_db are missing the "static" keyword
 - [#2311] Feature: Add tx_oelib_db::count
 - [#3405] Feature: Add Model_FrontEndUser::getAge
